Perkin-UAT/force-app/main/default/objects/B2B_Deals__c/B2B_Deals__c.object-meta.xml
<CustomObject>
    <label>B2B Deals</label>
    <nameField>
        <displayFormat>Deal# {00000}</displayFormat>
        <label>B2B Deal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>