Perkin-UAT/force-app/main/default/objects/B2B_Deals__c/fields/B2B_Account__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>B2B Deals</relationshipLabel>
    <relationshipName>B2B_Deals</relationshipName>
    <type>Lookup</type>
</CustomField>