Perkin-UAT/force-app/main/default/objects/B2B_Deals__c/fields/B2B_Currency__c.field-meta.xml
<CustomField>
    <fullName>B2B_Currency__c</fullName>
    <label>B2B Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>