Perkin-UAT/force-app/main/default/objects/B2B_Deals__c/fields/B2B_Deal_Discount__c.field-meta.xml
<CustomField>
    <fullName>B2B_Deal_Discount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>B2B Deal Discount</label>
    <referenceTo>B2B_Deal_Discount__c</referenceTo>
    <relationshipLabel>B2B Deal Discounts</relationshipLabel>
    <relationshipName>B2B_Deal_Discounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>