Perkin-UAT/force-app/main/default/objects/B2B_Deals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>B2B_Deal_Number__c</columns>
    <columns>B2B_Account__c</columns>
    <columns>B2B_Currency__c</columns>
    <columns>B2B_Deal_Discount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>